added services, http & routing

--- a/end/src/app/players/players.component.html
+++ b/end/src/app/players/players.component.html
@@ -1,5 +1,6 @@
 <div>
-    <h3 style="background-color:whitesmoke;padding: 10px">{{pageTitle}}</h3>
+    <div  style="background-color:whitesmoke;height:30px;font-size:20px;border-bottom-width:1px;border-bottom-style:solid;border-bottom-color:gray">{{pageTitle}}</div>
+    <br>
     <div>
         Filter By: <input type='text' [(ngModel)]='listFilter' />
     </div>
