added feature modules

--- a/end/src/app/players/players.component.html
+++ b/end/src/app/players/players.component.html
@@ -28,7 +28,7 @@
                     <img *ngIf="showImage" [src]='player.imageUrl' [style.width.px]='imageWidth' />
                 </td>
                 <td>{{player.rank}}</td>
-                <td>{{player.playerName }}</td>
+                <td><a [routerLink]="['/players',player.playerID]">{{player.playerName }}</a></td>
                 <!-- <td>{{player.country | uppercase}}</td> -->
                 <td><app-country-flag [countryCode]='player.countryCode' (flagClick)="countryFlagClicked($event)"></app-country-flag></td>
                 <td>{{player.totals}}</td>
